Fix buttons wrapping on small screens

--- a/trackit/src/app/entry/entrieslist/entrieslist.component.css
+++ b/trackit/src/app/entry/entrieslist/entrieslist.component.css
@@ -16,8 +16,10 @@ td {
 .value {
   font-size: x-large;
   font-weight: bold;
+  text-align: right;
 }
-.align-right {
+.actions {
+  white-space: nowrap;
   text-align: right;
 }
 
